# MedEvalKit

./: .gitignore  LLMs.py  Readme.md  benchmarks.py  eval.py  eval.sh  pyproject.toml
models/: base_llm.py
models/BiMediX2/: BiMediX2_hf.py
models/BiomedGPT/: BiomedGPT.py
models/GPT/: GPT.py
models/HealthGPT/: HealthGPT.py  HealthGPT_phi.py  utils.py
models/HuatuoGPT/: HuatuoGPT_hf.py  HuatuoGPT_vllm.py  cli.py  conversation.py  convert_llava_weights_to_hf.py
models/InternVL/: InternVL_vllm.py  utils.py
models/Janus/: Janus.py
models/LLava/: LLava_hf.py  LLava_vllm.py  convert_llava_weights_to_hf.py
models/LLava_Med/: LLava_Med_hf.py  LLava_Med_vllm.py  mm_utils.py  utils.py
models/Llama_3/: Llama_3_2_vision_instruct_hf.py  Llama_3_2_vision_instruct_vllm.py
models/MedGemma/: MedGemma_hf.py  MedGemma_vllm.py  test.py
models/Med_Flamingo/: Med_Flamingo_hf.py
models/Qwen2_5_VL/: Qwen2_5_VL_hf.py  Qwen2_5_VL_vllm.py
models/Qwen2_VL/: Qwen2_VL_hf.py  Qwen2_VL_vllm.py
models/TestModel/: TestModel.py
models/VILA_M3/: VILA_M3.py
models/vllm_text/: vllm_no_template.py  vllm_processor.py  vllm_tokenizer.py
utils/: base_dataset.py  utils.py
utils/CMB/: CMB.py
utils/CMExam/: CMExam.py
utils/CMMLU/: CMMLU.py
utils/CheXpert_Plus/: CheXpert_Plus.py
utils/HealthBench/: HealthBench.py  official_code.py  utils.py
utils/IU_XRAY/: IU_XRAY.py
utils/MIMIC_CXR/: MIMIC_CXR.py
utils/MMLU/: MMLU.py
utils/MMMU/: MMMU.py  data_utils.py  eval_test.py  eval_utils.py  eval_val.py
utils/MedFrameQA/: MedFrameQA.py
utils/MedMCQA/: MedMCQA.py
utils/MedQA_MCMLE/: MedQA_MCMLE.py
utils/MedQA_USMLE/: MedQA_USMLE.py
utils/MedXpertQA/: MedXpertQA.py
(+69 files in other folders)
