[project]
name = "medevalkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "accelerate==1.7.0",
  "cupy-cuda12x>=13.6.0",
  "datasets>=4.0.0",
  "google-genai>=1.31.0",
  "mathruler>=0.1.0",
  "nltk==3.9.1",
  "open-clip-torch==2.32.0",
  "pylatexenc==2.10",
  "qwen-vl-utils==0.0.11",
  "rouge==1.0.1",
  "torch>=2.7.0",
  "torchvision>=0.22.0",
  "vllm==0.9.0.1",
  "webdataset==0.2.86",
  "shortuuid>=1.0.13",
  # uv cannot install flash-attn via `uv sync`
  # but after installed, to not be auto-removed by `uv sync`
  # uncomment this or use `uv sync --inexact`
  "flash-attn==2.8.3",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
