[project]
name = "MedEvalKit"
version = "0.1.0"
description = "A comprehensive evaluation framework for Large Medical Models (LMMs/LLMs) in the healthcare domain."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "accelerate==1.7.0",
  "cupy-cuda12x>=13.6.0",
  "datasets>=4.0.0",
  "google-genai>=1.31.0",
  "mathruler>=0.1.0",
  "nltk==3.9.1",
  "open-clip-torch==2.32.0",
  "pylatexenc==2.10",
  "qwen-vl-utils==0.0.11",
  "rouge==1.0.1",
  "torch==2.7.1",
  "torchvision>=0.22.0",
  "vllm==0.10.1.1",
  "webdataset==0.2.86",
  "shortuuid>=1.0.13",
  "flash-attn==2.8.3",
  "transformers>=4.56.0",
  "pydash>=8.0.5",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv]
no-build-isolation-package = ["flash-attn"]
